work detail update
