# swagger/swagger.yaml
@@ -505,13 +505,78 @@ paths:
       parameters:
       - in: "body"
         name: "body"
-        description: "User workplace object that needs to be updated in the database"
+        description: "User workplace object that needs to be created in the database"
         required: true
         schema:
           $ref: "#/definitions/CreateUpdateWorkPlaceDetail"
       responses:
         200:
           description: "Successfully Created User WorkPlace Detail"
+          schema:
+            type: "object"
+            properties:
+              data:
+                $ref: "#/definitions/UserProfile"
+              message:
+                type: "string"
+        404:
+          description: "Username or password is incorrect"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: "integer"
+                description: "The http status code"
+              code:
+                type: "integer"
+                description: "The error code"
+              message:
+                type: "string"
+                description: "The message associated to the error code"
+        400:
+          description: "Invalid Input"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: "integer"
+                description: "The http status code"
+              code:
+                type: "integer"
+                description: "The error code"
+              message:
+                type: "string"
+                description: "The message associated to the error code"
+  /users/updateWorkPlaceDetail/{workplaceDetailsID}:    
+    x-swagger-router-controller: users
+    post:
+      tags:
+      - "Users"
+      summary: "Update user workplace detail"
+      operationId: updateWorkPlaceDetail
+      security:
+        - Bearer: []
+      x-security-scopes:
+        - user
+        - admin
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "path"
+        name: "workplaceDetailsID"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "body"
+        description: "User workplace object that needs to be updated in the database"
+        required: true
+        schema:
+          $ref: "#/definitions/CreateUpdateWorkPlaceDetail"
+      responses:
+        200:
+          description: "Successfully Updated User WorkPlace Detail"
           schema:
             type: "object"
             properties:
